# renode-rs

./: Cargo.toml  hello_m4.repl  hello_m4.resc  memory.x  renode-runner.sh
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
