[package]
name = "hello-m4"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m     = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt  = "0.7"
panic-halt   = "0.2"
cortex-m-semihosting = "0.5"

[profile.release]
opt-level = "s"    # optimize for size
lto = true
codegen-units = 1
